--- a/HearthstoneCORE/HearthstoneCORE.csproj
+++ b/HearthstoneCORE/HearthstoneCORE.csproj
@@ -4,14 +4,20 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <StartupObject>HearthstoneCORE.Program</StartupObject>
-    <ApplicationIcon>logo.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\Icons\logo.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Graphic\card.ascii">
+    <None Update="Resources\ASCII\card.ascii">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Graphic\logo.ascii">
+    <None Update="Resources\ASCII\gameboard1.ascii">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\ASCII\logo.ascii">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\CardsImageArt\TempArt.ascii">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
