Added redrawing functionality and started on Player bases

--- a/HearthstoneCORE/HearthstoneCORE.csproj
+++ b/HearthstoneCORE/HearthstoneCORE.csproj
@@ -5,9 +5,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <StartupObject>HearthstoneCORE.Program</StartupObject>
     <ApplicationIcon>Resources\Icons\logo.ico</ApplicationIcon>
+    <Company>KevinJPetersen</Company>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="Resources\ASCII\ascii-table.ascii">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\ASCII\card.ascii">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -15,6 +19,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\ASCII\logo.ascii">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\ASCII\player_base.ascii">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\CardsImageArt\TempArt.ascii">
