Started on Cards and Player handling
- Added Player Class with Cards functionality to highlight and go through cards
- Added Card Data JSON from https://github.com/pdyck/hearthstone-db

--- a/HearthstoneCORE/HearthstoneCORE.csproj
+++ b/HearthstoneCORE/HearthstoneCORE.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Resources\ASCII\ascii-table.ascii">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -22,6 +26,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\ASCII\player_base.ascii">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\CardData\cards.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\CardsImageArt\TempArt.ascii">
